@@ -198,6 +198,10 @@ TRACK_PROVIDERS=Yes
 
 ZONE2ZONE=2
 
+ACCOUNTING=Yes
+
+DYNAMIC_BLACKLIST=Yes
+
 ###############################################################################
 # MARK Layout
 ###############################################################################
