@@ -193,6 +193,10 @@ TRACK_PROVIDERS=No
 
 ZONE2ZONE=2
 
+ACCOUNTING=Yes
+
+DYNAMIC_BLACKLIST=Yes
+
 ###############################################################################
 # MARK Layout
 ###############################################################################
