@@ -44,6 +44,11 @@
   <section id="Basics">
     <title>Accounting Basics</title>
 
+    <para>Shorewall's accounting facility is enabled by the ACCOUNTING setting
+    in <ulink url="manpages/shorewall.conf.html">shorewall.conf</ulink> (5).
+    This option was added in Shorewall 4.5.0 and defaults to 'Yes'. Versions
+    prior to 4.5.0 unconditionally enable accounting.</para>
+
     <para>Shorewall accounting rules are described in the file
     <filename><filename>/etc/shorewall/accounting</filename></filename>. By
     default, the accounting rules are placed in a chain called
