@@ -156,6 +156,12 @@ ipset -B Blacklist 206.124.146.177 -b SMTP</programlisting>
   <section id="Dynamic">
     <title>Dynamic Blacklisting</title>
 
+    <para>Dynamic blacklisting is enabled unconditionally in Shorewall
+    versions prior to 4.5.0. Beginning with 4.5.0, dynamic blacklisting is
+    enabled by default but may be disabled by setting DYNAMIC_BLACKLIST=No in
+    <ulink url="manpages/shorewall.conf.html">shorewall.conf</ulink>
+    (5).</para>
+
     <para>Dynamic blacklisting doesn't use any configuration parameters but is
     rather controlled using /sbin/shorewall[-lite] commands:</para>
 
