@@ -28,6 +28,9 @@
     their packet and byte counters using the <command>shorewall show
     accounting</command> command.</para>
 
+    <para>This file is not processed if ACCOUNTING=No in <ulink
+    url="shorewall.conf.html">shorewall.conf</ulink> (5).</para>
+
     <para>The columns in the file are as follows.</para>
 
     <variablelist>
