@@ -136,3 +136,12 @@ None.
 
 3)  Shorewall now combines identical logging chains. Previously, a
     separate chain was created for each logging rule.
+
+4)  Beginning with Shorewall 4.5.0, accounting can be disabled by
+    setting ACCOUNTING=No in shorewall.conf.
+
+    Similarly, dynamic blacklisting can be disabled by setting
+    DYNAMIC_BLACKLIST=No. 
+
+    Each of these settings saves a jump rule in each of the built-in
+    filter chains (INPUT, OUTPUT and FORWARD).
