@@ -8,3 +8,6 @@ Changes in 4.5.0
 
 4)  Combine identical logging chains.
 
+5)  Added ACCOUNTING and DYNAMIC_BLACKLIST options.
+
+
